# adventofcode-2023

./: .gitignore  README.md
day/1/: Cargo.toml
day/1/solve/src/: lib.rs  main.rs
day/1/src/: lib.rs  main.rs
day/10/: Cargo.toml
day/10/solve/src/: main.rs
day/10/src/: lib.rs  main.rs
day/2/: Cargo.toml
day/2/solve/: Cargo.toml
day/2/solve/src/: main.rs
day/2/src/: lib.rs  main.rs
day/3/: Cargo.toml
day/3/solve/src/: main.rs
day/3/src/: lib.rs  main.rs
day/4/: Cargo.toml
day/4/solve/src/: main.rs
day/4/src/: lib.rs  main.rs
day/5/: Cargo.toml
day/5/solve/src/: main.rs
day/5/src/: lib.rs  main.rs
day/6/: Cargo.toml  input.txt
day/6/solve/src/: main.rs
day/6/src/: lib.rs  main.rs
day/7/: Cargo.toml
day/7/solve/src/: main.rs
day/7/src/: lib.rs  main.rs
day/8/: Cargo.toml
day/8/solve/: Cargo.toml
day/8/solve/src/: main.rs
day/8/src/: lib.rs  main.rs
day/9/: Cargo.toml
day/9/solve/: Cargo.toml
day/9/solve/src/: main.rs
day/9/src/: lib.rs  main.rs
multicall/: Cargo.toml
multicall/src/: main.rs
